ui complete shopping cart

--- a/reels/reelsapp/src/config.json
+++ b/reels/reelsapp/src/config.json
@@ -1,8 +1,8 @@
 {
-  "apiKey": "AIzaSyAsM75v5h20tWsdE4hYdJTA3ps6VqTg8rw",
-  "authDomain": "reels-c95d7.firebaseapp.com",
-  "projectId": "reels-c95d7",
-  "storageBucket": "reels-c95d7.appspot.com",
-  "messagingSenderId": "194835631979",
-  "appId": "1:194835631979:web:a963fdf9c1c2582b55062e"
+  "authDomain": "reels-4a3d4.firebaseapp.com",
+  "projectId": "reels-4a3d4",
+  "storageBucket": "reels-4a3d4.appspot.com",
+  "messagingSenderId": "1068860258101",
+  "apiKey": "AIzaSyBcD_VpalJWfsKyl2pjtpHlCeOQ-U8-5Lo",
+  "appId": "1:1068860258101:web:3dc1484eec796c7babbe7c"
 }
